<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/etxt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patname"
            android:nextFocusDown="@+id/etxt_dob"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_name"
            android:hint="@string/patdob"
            android:nextFocusDown="@+id/etxt_address"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_dob"
            android:hint="@string/pataddress"
            android:nextFocusDown="@+id/etxt_card"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_address"
            android:hint="@string/patcard"
            android:inputType="number"
            android:singleLine="true" />

        <RadioGroup
            android:id="@+id/rb_gender"
            android:layout_below="@+id/etxt_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="InvalidId">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <RadioButton
                android:id="@+id/rd_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/patmale" />
            <RadioButton
                android:id="@+id/rd_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/patfemale" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_gender"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>